--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
 |=-----------------------=[ <font color="#00FF00	"> Member of b34r5hell CTF </font>]------------------------=|
 |=----------------------------------------------------------------------------=|
 
-
-  <!--  <a href="https://drive.google.com/open?id=1nJhE6C5Z22G7Tg-Nc_JkZgxkfRYkETp1" class="button5" style="background-color:#42cc8c;">Resume</a> -->
-
     </pre>
      <pre class="table2">
 +=======+$man Ighor_Tavares====================================================+
@@ -77,6 +74,7 @@
 |       | <font color="white">      _-_ <a href="https://github.com/itavares/CSE422S--Operating-Systems-Organizations">CSE 422</a> - Operation Systems Organizations                 </font> |
 |       | <font color="white">      _-_ <a href="https://github.com/itavares/CSE330-Rapid-Prototype-Developement-and-Creative-Programming">CSE 330</a> - Rapid Prototype Development                     </font> |
 |       | <font color="white">      _-_ <a href="https://github.com/itavares/Temporal-Link-Prediction-and-Community-Detection">CSE 416</a> - Analysis of Network Data                        </font> |
+|       | <font color="white">      _-_ <a href="https://github.com/elainecole/iot-monitor">CSE 569</a> - Advanced IoT Security - IoT Network Canary      </font> |
 |       | <font color="white">==> Summer 2019 - Master's Project                                  </font> |
 |       | <font color="white">      _-_ For this summer, I am working on IoT security and its     </font> |
 |       | <font color="white">            vulnerabilities. I will explore the dangers and lack    </font> |
@@ -119,6 +117,14 @@
 |       | <font color="white"> admin account's password from a staff computer with kali linux     </font> |
 |       | <font color="white"> and have full access to the network, files, etc. Of course, this   </font> |
 |       | <font color="white"> was done under my boss supervision and authorization.              </font> |
+|       |                                                                      |
+|       | <font color="yellow">                          *** Bash Scripting ***                    </font> |
+|       | <font color="white">  I was first introduced to bash scripting during my first Defcon. I</font> |
+|       | <font color="white">  instantly fell in love with it. The automation capability is what </font> |
+|       | <font color="white">  I loved the most. Coming from a linux background, I really enjoyed</font> |
+|       | <font color="white">  automating almost anything I did, from ssh connection, to setting </font> |
+|       | <font color="white">  firewalls automatically in a new server. I have been writing for  </font> |
+|       | <font color="white">  a lot of things, such as system log monitoring and funny scripts. </font> |
 |       |                                                                      |
 |       | <font color="yellow">                          *** Python ***                            </font> |
 |       | <font color="white"> I enjoy making using python to automate my daily life. I love      </font> |
