--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 |=---------=[ <font color="white">B.S Computer Science | M.S Cybersecurity Engineering</a></font> ]=---------=|
 |=----------------------------------------------------------------------------=|
 |=-----------------------=[ <font color="#00FF00	"> Member of b34r5hell CTF </font>]------------------------=|
+|=----------------=[ <font color="#00FF00	"> Check out my blog :<a href="https://sumb0dyblog.wordpress.com/"> Sumb0dy's Hacked </a></font>]------------------=|
 |=----------------------------------------------------------------------------=|
 
     </pre>
