--- a/series/index.html
+++ b/series/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="ighortavares.com/series/" />
+<link rel="canonical" href="/series/" />
 
 
     <title>
@@ -25,7 +25,7 @@
 
 
 
-<link rel="stylesheet" href="/ighortavares.com/main.eaf4f2571fc0260b30532ce37bc0e1c2107885bfec3b592755f30dba7741301e.css">
+<link rel="stylesheet" href="/main.eaf4f2571fc0260b30532ce37bc0e1c2107885bfec3b592755f30dba7741301e.css">
 
 
 
@@ -35,7 +35,7 @@
 <meta itemprop="name" content="Series">
 <meta itemprop="description" content="My new homepage or blog">
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="ighortavares.com"/>
+<meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="Series"/>
 <meta name="twitter:description" content="My new homepage or blog"/>
@@ -46,7 +46,7 @@
     <meta property="og:title" content="Series" />
 <meta property="og:description" content="My new homepage or blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="ighortavares.com/series/" /><meta property="og:image" content="ighortavares.com"/><meta property="og:site_name" content="Welcome To My 172.0.0.1" />
+<meta property="og:url" content="/series/" /><meta property="og:image" content="/"/><meta property="og:site_name" content="Welcome To My 172.0.0.1" />
 
 
 
@@ -56,7 +56,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="ighortavares.com/series/index.xml" title="Welcome To My 172.0.0.1" />
+<link rel="alternate" type="application/rss+xml" href="/series/index.xml" title="Welcome To My 172.0.0.1" />
 
 
 
@@ -89,7 +89,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/ighortavares.com/about/">About</a></li><li><a href="/ighortavares.com/posts">Blog</a></li><li><a href="/ighortavares.com/project/">Projects</a></li>
+    <ul class="menu__inner"><li><a href="/about/">About</a></li><li><a href="/posts">Blog</a></li><li><a href="/project/">Projects</a></li>
     </ul>
 </nav>
 
@@ -136,8 +136,8 @@
     <div class="footer__inner">
         <div class="footer__content">
             <span>&copy; 2021</span>
-            <span><a href="ighortavares.com">Ighor Tavares</a></span>
-            <span><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></span><span><a href="ighortavares.com/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
+            <span><a href="/">Ighor Tavares</a></span>
+            <span><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></span><span><a href="/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
         </div>
     </div>
     <div class="footer__inner">
@@ -155,7 +155,7 @@
 
 
 
-<script type="text/javascript" src="/ighortavares.com/bundle.min.599099f1f14b78b657d524b28e10e0c5098e7cd46e9c7aed73d577068a276c3ff1bb234cbf29cb313333e83cf411727b43157c91ce5b809e2ffc81664614608e.js" integrity="sha512-WZCZ8fFLeLZX1SSyjhDgxQmOfNRunHrtc9V3BoonbD/xuyNMvynLMTMz6Dz0EXJ7QxV8kc5bgJ4v/IFmRhRgjg=="></script>
+<script type="text/javascript" src="/bundle.min.599099f1f14b78b657d524b28e10e0c5098e7cd46e9c7aed73d577068a276c3ff1bb234cbf29cb313333e83cf411727b43157c91ce5b809e2ffc81664614608e.js" integrity="sha512-WZCZ8fFLeLZX1SSyjhDgxQmOfNRunHrtc9V3BoonbD/xuyNMvynLMTMz6Dz0EXJ7QxV8kc5bgJ4v/IFmRhRgjg=="></script>
 
 
 
