--- a/about-hugo/index.html
+++ b/about-hugo/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>https://ighortavares.com/about/</title>
-    <link rel="canonical" href="https://ighortavares.com/about/">
+    <title>https://sum_b0dy.com/about/</title>
+    <link rel="canonical" href="https://sum_b0dy.com/about/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://ighortavares.com/about/">
+    <meta http-equiv="refresh" content="0; url=https://sum_b0dy.com/about/">
   </head>
 </html>
