--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="https://ighortavares.com/" />
+<link rel="canonical" href="https://sum_b0dy.com/" />
 
 
     <title>
@@ -36,7 +36,7 @@
 <meta itemprop="name" content="Welcome To My 172.0.0.1">
 <meta itemprop="description" content="My new homepage or blog">
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://ighortavares.com"/>
+<meta name="twitter:image" content="https://sum_b0dy.com"/>
 
 <meta name="twitter:title" content="Welcome To My 172.0.0.1"/>
 <meta name="twitter:description" content="My new homepage or blog"/>
@@ -47,7 +47,7 @@
     <meta property="og:title" content="Welcome To My 172.0.0.1" />
 <meta property="og:description" content="My new homepage or blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://ighortavares.com/" /><meta property="og:image" content="https://ighortavares.com"/><meta property="og:site_name" content="Welcome To My 172.0.0.1" />
+<meta property="og:url" content="https://sum_b0dy.com/" /><meta property="og:image" content="https://sum_b0dy.com"/><meta property="og:site_name" content="Welcome To My 172.0.0.1" />
 
 
 
@@ -57,7 +57,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="https://ighortavares.com/index.xml" title="Welcome To My 172.0.0.1" />
+<link rel="alternate" type="application/rss+xml" href="https://sum_b0dy.com/index.xml" title="Welcome To My 172.0.0.1" />
 
 
 
@@ -132,8 +132,8 @@
     <div class="footer__inner">
         <div class="footer__content">
             <span>&copy; 2022</span>
-            <span><a href="https://ighortavares.com">Ighor Tavares</a></span>
-            <span><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></span><span><a href="https://ighortavares.com/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
+            <span><a href="https://sum_b0dy.com">Ighor Tavares</a></span>
+            <span><a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a></span><span><a href="https://sum_b0dy.com/posts/index.xml" target="_blank" title="rss"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></a></span>
         </div>
     </div>
     <div class="footer__inner">
