Website about/config updated

--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
 
     <title>
         
-            404 Page not found :: Welcome To My 172.0.0.1 
+            404 Page not found :: Hello There! I am Ighor. 
         
     </title>
 
@@ -46,7 +46,7 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="My new homepage or blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://sumb0dy.com/404.html" /><meta property="og:image" content="https://sumb0dy.com"/><meta property="og:site_name" content="Welcome To My 172.0.0.1" />
+<meta property="og:url" content="https://sumb0dy.com/404.html" /><meta property="og:image" content="https://sumb0dy.com"/><meta property="og:site_name" content="Hello There! I am Ighor." />
 
 
 
