--- a/series/index.html
+++ b/series/index.html
@@ -14,7 +14,7 @@
 
     <title>
         
-            Series :: Welcome To My 172.0.0.1 
+            Series :: Hello There! I am Ighor. 
         
     </title>
 
@@ -46,7 +46,7 @@
     <meta property="og:title" content="Series" />
 <meta property="og:description" content="My new homepage or blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://sumb0dy.com/series/" /><meta property="og:image" content="https://sumb0dy.com"/><meta property="og:site_name" content="Welcome To My 172.0.0.1" />
+<meta property="og:url" content="https://sumb0dy.com/series/" /><meta property="og:image" content="https://sumb0dy.com"/><meta property="og:site_name" content="Hello There! I am Ighor." />
 
 
 
@@ -56,7 +56,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="https://sumb0dy.com/series/index.xml" title="Welcome To My 172.0.0.1" />
+<link rel="alternate" type="application/rss+xml" href="https://sumb0dy.com/series/index.xml" title="Hello There! I am Ighor." />
 
 
 
